dotfiles/system-root/etc/ufw/user.rules
### Managed by NosArch ###

*filter
:ufw-user-input - [0:0]
:ufw-user-output - [0:0]
:ufw-user-forward - [0:0]
:ufw-before-logging-input - [0:0]
:ufw-before-logging-output - [0:0]
:ufw-before-logging-forward - [0:0]
:ufw-user-logging-input - [0:0]
:ufw-user-logging-output - [0:0]
:ufw-user-logging-forward - [0:0]
:ufw-after-logging-input - [0:0]
:ufw-after-logging-output - [0:0]
:ufw-after-logging-forward - [0:0]
:ufw-logging-deny - [0:0]
:ufw-logging-allow - [0:0]
:ufw-user-limit - [0:0]
:ufw-user-limit-accept - [0:0]
### RULES ###

### tuple ### allow tcp 53317 0.0.0.0/0 any 0.0.0.0/0 LocalSend - in
-A ufw-user-input -p tcp --dport 53317 -j ACCEPT -m comment --comment 'dapp_LocalSend'

### tuple ### allow udp 53317 0.0.0.0/0 any 0.0.0.0/0 LocalSend - in
-A ufw-user-input -p udp --dport 53317 -j ACCEPT -m comment --comment 'dapp_LocalSend'

### tuple ### allow tcp 1714:1764 0.0.0.0/0 any 192.168.1.0/24 KDEConnect - in
-A ufw-user-input -p tcp -m multiport --dports 1714:1764 -s 192.168.1.0/24 -j ACCEPT -m comment --comment 'dapp_KDEConnect'

### tuple ### allow udp 1714:1764 0.0.0.0/0 any 192.168.1.0/24 KDEConnect - in
-A ufw-user-input -p udp -m multiport --dports 1714:1764 -s 192.168.1.0/24 -j ACCEPT -m comment --comment 'dapp_KDEConnect'

### END RULES ###

### LOGGING ###
-A ufw-after-logging-input -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-after-logging-forward -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-I ufw-logging-deny -m conntrack --ctstate INVALID -j RETURN -m limit --limit 3/min --limit-burst 10
-A ufw-logging-deny -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-logging-allow -j LOG --log-prefix "[UFW ALLOW] " -m limit --limit 3/min --limit-burst 10
### END LOGGING ###

### RATE LIMITING ###
-A ufw-user-limit -m limit --limit 3/minute -j LOG --log-prefix "[UFW LIMIT BLOCK] "
-A ufw-user-limit -j REJECT
-A ufw-user-limit-accept -j ACCEPT
### END RATE LIMITING ###
COMMIT
